# project-assessment

./: pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: eval.py
app/api/v1/schemas/: eval.py
app/core/: config.py
app/prompts/: system_prompt.py
app/services/: project_doc.py
scripts/: collection_creation.py
